fixed alignment in contact page

--- a/styles.css
+++ b/styles.css
@@ -67,13 +67,16 @@ body{
     background-color: #232323;
     color: white;
     border: 0px #232323;
-    margin: 2% 7.5%;
-    max-height: 28%;
-    border-radius: 40px;
+    height: 2em;
+    align-items: center;
+    border-radius: 30px;
     font-size: 50px;
+    display: flex;
+    width: 9em;
+    justify-content: space-around;
 }
 #arrow{
-    margin-left: 232px;
+    margin-top: 9px;
 }
 #logocount{
     list-style: none;
@@ -117,7 +120,7 @@ landing page
 .spkrsText{
     color: var(--light-black, #232323);
     text-align: center;
-    font-family: Satoshi Variable;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 50px;
     font-style: normal;
     font-weight: 700;
@@ -140,7 +143,7 @@ landing page
     width: 520px;
     flex-shrink: 0;
     color: var(--light-black, #232323);
-    font-family: Satoshi Variable;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 700;
@@ -163,7 +166,7 @@ landing page
     width: 520px;
     flex-shrink: 0;
     color: var(--white, #FFF);
-    font-family: Satoshi Variable;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     font-style: normal;
     font-weight: 700;
@@ -214,7 +217,7 @@ landing page
 
 .spkrsTitleText-1-l{
     color: var(--white, #FFF);
-    font-family: Satoshi Variable;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 34px;
     font-style: normal;
     font-weight: 700;
@@ -222,7 +225,7 @@ landing page
 }
 .spkrsTitleText-2-l{
     color: var(--white, #FFF);
-    font-family: Satoshi Variable;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 17px;
     font-style: normal;
     font-weight: 500;
@@ -231,7 +234,7 @@ landing page
 
 .spkrsTitleText-1-r{
     color: var(--light-black, #232323);
-    font-family: Satoshi Variable;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 34px;
     font-style: normal;
     font-weight: 700;
@@ -239,7 +242,7 @@ landing page
 }
 .spkrsTitleText-2-r{
     color: var(--light-black, #232323);
-    font-family: Satoshi Variable;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 17px;
     font-style: normal;
     font-weight: 500;
@@ -313,24 +316,28 @@ landing page
 /*     sponsors section  */
 
 .heading-section {
-    background: #ffffff;
-    border-radius: 40px;
     display: flex;
-    justify-content: center;
+    border-radius: 40px;
+    background: var(--white, #FFF);
+    padding: 36px 333px 36px 50px;
     align-items: center;
+    width: auto;
+}
+.heading-section-text{
     color: var(--light-black, #232323);
     text-align: center;
-    font-size: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 3.125rem;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
 }
 
 .twoBlocks{
+    margin-top: 7em;
     display: flex;
-    gap: 2em;
-    margin-top: 4em;
-    justify-content: center;
+    gap: 1em;
+    margin-bottom: 7em;
 }
 
 .left-sponsors-section{
@@ -343,6 +350,7 @@ landing page
 .leftBlock{
     display: flex;
     justify-content: space-evenly;
+    flex-direction: row;
     gap: 2em;
 }
 .right-sponsors-section {
@@ -474,10 +482,12 @@ landing page
 /*  ends here */
 
 .aboutpage{
+    margin-top: 5em;
     display: flex;
     justify-content: center; 
     background-color: black; 
     gap:20px;
+    margin-bottom: 5em;
     /* position: relative; */
 }
 .leftaboutcontainer{
@@ -505,7 +515,7 @@ border-radius: 40px;
     height: 68px;
     left: 50px;
     top: 36px;
-font-family: 'Satoshi Variable';
+font-family: 'Arial, Helvetica, sans-serif';
 font-style: normal;
 font-weight: 700;
 font-size: 50px;
@@ -531,7 +541,7 @@ width: 511px;
 height: 570px;
 left: calc(50% - 511px/2);
 top: calc(50% - 570px/2); 
-font-family: 'Satoshi Variable';
+font-family: 'Arial, Helvetica, sans-serif';
 font-style: normal;
 font-weight: 700;
 font-size: 22px;
@@ -598,7 +608,7 @@ width: 322px;
 height: 68px;
 left: 50px;
 top: 36px; 
-font-family: 'Satoshi Variable';
+font-family: 'Arial, Helvetica, sans-serif';
 font-style: normal;
 font-weight: 700;
 font-size: 50px;
@@ -644,7 +654,7 @@ width: 363px;
 height: 43px;
 left: calc(50% - 363px/2);
 top: calc(50% - 43px/2 + 0.5px); 
-font-family: 'Satoshi Variable';
+font-family: 'Arial, Helvetica, sans-serif';
 font-style: normal;
 font-weight: 700;
 font-size: 32px;
@@ -658,7 +668,7 @@ color: #232323;
     height: 43px;
     left: calc(50% - 266px/2 + 0.5px);
     top: calc(50% - 43px/2 + 0.5px); 
-    font-family: 'Satoshi Variable';
+    font-family: 'Arial, Helvetica, sans-serif';
     font-style: normal;
     font-weight: 700;
     font-size: 32px;
@@ -672,7 +682,7 @@ color: #232323;
     height: 64px;
     left: calc(50% - 489px/2);
     top: calc(50% - 64px/2); 
-    font-family: 'Satoshi Variable';
+    font-family: 'Arial, Helvetica, sans-serif';
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
@@ -758,7 +768,7 @@ border-radius: 60px;
     left: calc(50% - 382px/2 + 0.5px);
     top: calc(50% - 41px/2 + 0.5px);
     
-    font-family: 'Satoshi Variable';
+    font-family: 'Arial, Helvetica, sans-serif';
     font-style: normal;
     font-weight: 700;
     font-size: 30px;
